# patch-camelyon

./: .gitignore  Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
notebook/001-ResNet50/: test.ipynb  train.ipynb
