[project]
name = "patch-camelyon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.3.0",
    "ipython>=8.37.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pytorch-lightning>=2.5.5",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
